added reports page, college report page, modified index to have link to reports page, view to support prepared statement for college report

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -30,6 +30,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="#tables">Tables</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://127.0.0.1:8000/reports">Reports</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://127.0.0.1:8000/alter_table/">Alter a Table</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded">Hello, {{request.user}}</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="{% url 'logoutPage' %}">Logout</a></li>
@@ -172,7 +173,7 @@
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="#tables">
+                    <a class="btn btn-xl btn-outline-light" href="http://127.0.0.1:8000/reports">
                         <i class="fas fa-download me-2"></i>
                         Show me Reports!
                     </a>
