stadium report added. Implemented transactions and set isolation levels for reports

--- a/app/templates/app/reports.html
+++ b/app/templates/app/reports.html
@@ -81,16 +81,16 @@
 
                         <div class="text-center mt-4">
                             <a class="btn-xl" href="http://127.0.0.1:8000/experience_report">
-                                <i class="fas fa-download me-2"></i>
+                                <i class=" fas fa-download me-2"></i>
                                 Experience Report
                             </a>
                         </div>
                         <br>
 
                         <div class="text-center mt-4">
-                            <a class="btn-xl" href="#">
+                            <a class="btn-xl" href="http://127.0.0.1:8000/stadium_report">
                                 <i class="fas fa-download me-2"></i>
-                                TBD
+                                Stadium report
                             </a>
                         </div>
 
