small bug fixes with HTML

--- a/app/templates/app/experience_report.html
+++ b/app/templates/app/experience_report.html
@@ -8,7 +8,7 @@
         <meta name="author" content="" />
         <title>Experience Report</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/5742/5742395.png" />
+        <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/1642/1642423.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -32,6 +32,7 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://127.0.0.1:8000/#tables">Return to Tables</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://127.0.0.1:8000/alter_table">Alter a Table</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://127.0.0.1:8000/reports">Reports</a></li>
 
                     </ul>
                 </div>
