--- a/app/templates/app/college_report.html
+++ b/app/templates/app/college_report.html
@@ -32,7 +32,8 @@
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://127.0.0.1:8000/#tables">Return to Tables</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://127.0.0.1:8000/alter_table">Alter a Table</a></li>
-    
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded" href="http://127.0.0.1:8000/reports">Reports</a></li>
+
                     </ul>
                 </div>
             </div>
