--- a/app/templates/app/alter_table.html
+++ b/app/templates/app/alter_table.html
@@ -262,7 +262,7 @@
                             {% csrf_token %}
                             <div class="form-group">
                                 <label for="stadium_update_set">SET</label>
-                                <input type="number" name="stadium_update_set" class="form-control" id="stadium_update_set" placeholder="enter SQL syntax for the SET clause" required>
+                                <input type="text" name="stadium_update_set" class="form-control" id="stadium_update_set" placeholder="enter SQL syntax for the SET clause" required>
                                 <br>
   
                                 <label for="stadium_update_where">WHERE</label>
